project(speed)

add_executable(${PROJECT_NAME})

target_include_directories(${PROJECT_NAME}
	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
	INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
)

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} PROJECT_SOURCES)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/engine PROJECT_SOURCES_ENGINE)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/graphics PROJECT_SOURCES_GRAPHICS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/input PROJECT_SOURCES_INPUT)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/sound PROJECT_SOURCES_SOUND)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/physics PROJECT_SOURCES_PHYSICS)
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/scene PROJECT_SOURCES_SCENE)

target_sources(${PROJECT_NAME}
	PRIVATE ${PROJECT_SOURCES}
	PRIVATE ${PROJECT_SOURCES_ENGINE}
	PRIVATE ${PROJECT_SOURCES_GRAPHICS}
	PRIVATE ${PROJECT_SOURCES_INPUT}
	PRIVATE ${PROJECT_SOURCES_SOUND}
	#PRIVATE ${PROJECT_SOURCES_PHYSICS}
	PRIVATE ${PROJECT_SOURCES_SCENE}
)